--- a/packages/mini-mobx/package.json
+++ b/packages/mini-mobx/package.json
@@ -2,7 +2,7 @@
   "name": "my-mobx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "webpack -w"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -20,6 +21,7 @@
     "mobx-react": "^5.2.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "ts-loader": "^8.4.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
