--- a/packages/mini-create-react-app-template/lerna.json
+++ b/packages/mini-create-react-app-template/lerna.json
@@ -1,6 +1,6 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useNx": true,
-  "useWorkspaces": true,
+  "packages": [
+    "packages/*"
+  ],
   "version": "0.0.0"
 }
