--- a/packages/mini-create-vue/tsconfig.json
+++ b/packages/mini-create-vue/tsconfig.json
@@ -3,6 +3,8 @@
   "include": ["index.ts", "utils/**/*"],
   "compilerOptions": {
     "strict": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    // https://juejin.cn/post/7053298681037979678
+    // "isolatedModules": true
   }
 }
