--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages:
   # all packages in direct subdirs of packages/
-  - 'packages/*'
+  - "packages/*"
   # all packages in subdirs of components/
-  - 'components/**'
+  - "components/**"
   # exclude packages that are inside test directories
-  - '!**/test/**'
+  - "!**/test/**"
