chore: yarn -> pnpm

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "mini-anything",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "cd docs && npm run deploy"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC"
 }
