chore(mini-pinia-ts): distingguish files of options and composition

--- a/packages/mini-pinia-ts/tsconfig.json
+++ b/packages/mini-pinia-ts/tsconfig.json
@@ -20,6 +20,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/stores/counter.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/stores/counter-options.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
