--- a/packages/mini-mobx/package.json
+++ b/packages/mini-mobx/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-mobx",
+  "name": "mini-mobx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "webpack -w"
   },
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.18",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -21,7 +20,6 @@
     "mobx-react": "^5.2.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "ts-loader": "^8.4.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
