--- a/packages/mini-reactivity/playground/tsconfig.json
+++ b/packages/mini-reactivity/playground/tsconfig.json
@@ -17,7 +17,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "vue": ["../src/index.ts"]
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
 }
